// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/pagination/demo/basic.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="ant-pagination-disabled ant-pagination-prev"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/changer.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3 ant-pagination-item-active"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="ant-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-options"
  >
    <div
      class="ant-pagination-options-size-changer ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="10 / page"
          >
            10 / page
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/controlled.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3 ant-pagination-item-active"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/itemRender.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="ant-pagination-disabled ant-pagination-prev"
    title="Previous Page"
  >
    <a>
      Previous
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="ant-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a>
      Next
    </a>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/jump.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2 ant-pagination-item-active"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="ant-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-options"
  >
    <div
      class="ant-pagination-options-quick-jumper"
    >
      Goto
      <input
        type="text"
        value=""
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/mini.md correctly 1`] = `
<div>
  <ul
    class="ant-pagination mini"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
  </ul>
  <ul
    class="ant-pagination mini"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
    <li
      class="ant-pagination-options"
    >
      <div
        class="ant-select-sm ant-pagination-options-size-changer ant-select ant-select-enabled"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-select-selection
            ant-select-selection--single"
          role="combobox"
          tabindex="0"
        >
          <div
            class="ant-select-selection__rendered"
          >
            <div
              class="ant-select-selection-selected-value"
              style="display:block;opacity:1"
              title="10 / page"
            >
              10 / page
            </div>
          </div>
          <span
            class="ant-select-arrow"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            <i
              class="anticon anticon-down ant-select-arrow-icon"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </i>
          </span>
        </div>
      </div>
      <div
        class="ant-pagination-options-quick-jumper"
      >
        Goto
        <input
          type="text"
          value=""
        />
      </div>
    </li>
  </ul>
  <ul
    class="ant-pagination mini"
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      Total 50 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
  </ul>
</div>
`;

exports[`renders ./components/pagination/demo/more.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-jump-prev"
    tabindex="0"
    title="Previous 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4 ant-pagination-item-after-jump-prev"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-6 ant-pagination-item-active"
    tabindex="0"
    title="6"
  >
    <a>
      6
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-7"
    tabindex="0"
    title="7"
  >
    <a>
      7
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-8 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="8"
  >
    <a>
      8
    </a>
  </li>
  <li
    class="ant-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/simple.md correctly 1`] = `
<ul
  class="ant-pagination ant-pagination-simple "
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
  <li
    class="ant-pagination-simple-pager"
    title="2/5"
  >
    <input
      size="3"
      type="text"
      value="2"
    />
    <span
      class="ant-pagination-slash"
    >
      ／
    </span>
    5
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    />
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/total.md correctly 1`] = `
<div>
  <ul
    class="ant-pagination "
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      Total 85 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
  </ul>
  <br />
  <ul
    class="ant-pagination "
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      1-20 of 85 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      />
    </li>
  </ul>
</div>
`;
